--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 }
 
+apply plugin: 'io.spring.dependency-management'
+
 test {
     useJUnitPlatform()
 }
