--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 
-    implementation 'com.opencsv:opencsv:4.5'
+    compile group: 'org.json', name: 'json', version: '20201115'
+
 }
 
 apply plugin: 'io.spring.dependency-management'
